# 3dsmax-mcp

./: .env.example  .gitignore  3dsmax-mcp-dev.skill  AGENTS.md  LICENSE  NATIVE_BRIDGE_PLAN.md  NATIVE_HANDLERS_PLAN.md  NATIVE_IDEAS.md  NATIVE_TOOLS_PLAN.md  README.md  TEST_ROBUSTNESS.md  TODO.md  TOOLS.md  dev.bat  install.py  mcp_config.ini  pyproject.toml
.agents/skills/3dsmax-mcp-dev/.claude/: settings.local.json
.claude/: CLAUDE.md
.claude/commands/: pull.md  push.md
.claude/skills/3dsmax-mcp-dev/: SKILL.md
cache/material_schemas/: Bitmaptexture.txt  MaxUsdPreviewSurface.txt  OSLMap.txt  PhysicalMaterial.txt  RS_Standard_Material.txt  StandardMaterial.txt  ai_standard_hair.txt  ai_standard_surface.txt  glTFMaterial.txt  openPBR_material.txt  tyBitmap.txt
docs/: self_describing_plugin_runtime.md
maxscript/: mcp_server.ms
maxscript/startup/: mcp_autostart.ms
native/: CMakeLists.txt  build.bat  deploy.bat  dev.bat
native/include/mcp_bridge/: bridge_gup.h  chat_ui.h  claude_client.h  command_dispatcher.h  handler_helpers.h  llm_client.h  main_thread_executor.h  native_handlers.h  pipe_server.h
native/src/: bridge_gup.cpp  chat_ui.cpp  command_dispatcher.cpp  dllmain.cpp  hello_max.def  llm_client.cpp  main_thread_executor.cpp  mcp_bridge.def  pipe_server.cpp
native/src/handlers/: chat_handlers.cpp  controller_handlers.cpp  file_handlers.cpp  inspect_handlers.cpp  learning_handlers.cpp  material_handlers.cpp  modifier_handlers.cpp  object_handlers.cpp  organize_handlers.cpp  orientation_handlers.cpp  plugin_introspect_handlers.cpp  scene_handlers.cpp  viewport_handlers.cpp
scripts/: build_skill.py  gen_tool_registry.py  register.py
skills/3dsmax-mcp-dev/: SKILL.md  maxscript-materials-textures.md
src/: coerce.py  max_client.py  server.py
src/helpers/: construction.py  maxscript.py
src/tools/: build.py  capabilities.py  chat.py  clone.py  controllers.py  data_channel.py  effects.py  execute.py  file_access.py  floor_plan.py  grid.py  hierarchy.py  identify.py  inspect.py  learning.py  material_ops.py  material_replace.py  materials.py  modifiers.py  objects.py  organize.py  orientation.py  palette_laydown.py  plugin_workflows.py  plugins.py  render.py  scattering.py  scene.py  scene_manage.py  scene_query.py  selection.py  session_context.py  snapshots.py  state_sets.py  transform.py  tyflow.py  viewport.py  visibility.py  wire_params.py  workflows.py
tests/: test_chat.py  test_controllers.py  test_material_editor_palette.py  test_material_ops_openpbr.py  test_material_slots.py  test_max_client.py  test_objects.py  test_organize_tools.py  test_plugin_workflows.py  test_plugins.py  test_scattering_tools.py  test_snapshots.py  test_workflows.py
