[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "3dsmax-mcp"
version = "0.1.0"
description = "MCP server bridging Claude to Autodesk 3ds Max"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
3dsmax-mcp = "src.server:main"
