[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "3dsmax-mcp"
version = "0.7.0"
description = "3dsmax MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
3dsmax-mcp = "src.server:main"
